--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,80 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.header {
+    width: 100%;
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.form-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: lightgray;
+    min-width: 70%;
+    /* height: 100vh; */
+}
+
+.form {
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    background-color: lightgray;
+}
+
+.form button {
+    background-color: crimson;
+}
+
+.form button:hover {
+    background-color: red;
+}
+
+.form-items-styles {
+    width: 100%;
+    padding: 20px;
+    margin: 10px;
+    font-size: 20px;
+    border-radius: 10px;
+}
+
+.tasks {
+    border: 1px solid #333;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70%;
+    padding: 20px;
+    background-color: antiquewhite;
+    border-radius: 20px;
+    margin: 10px;
+}
+
+.tasks div {
+    width: 100%;
+}
+
+.tasks button {
+    background-color: crimson;
+    border-radius: 100%;
+    width: 30px;
+    height: 30px;
+    font-size: 20px;
+    text-align: center;
+}
+
+.tasks button:hover {
+    background-color: red;
 }
